--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.70.5",
     "react-native-big-list": "^1.6.0",
+    "react-native-body-highlighter": "^2.1.4",
     "react-native-calendars": "^1.1293.0",
     "react-native-circular-progress": "^1.3.8",
     "react-native-circular-progress-indicator": "^4.4.2",
