--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-community/slider": "4.2.4",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "add": "^2.0.6",
@@ -46,6 +47,7 @@
     "expo-permissions": "~14.0.0",
     "expo-random": "~13.0.0",
     "expo-screen-orientation": "~5.0.1",
+    "expo-sensors": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
@@ -70,6 +72,7 @@
     "react-native-big-list": "^1.6.0",
     "react-native-body-highlighter": "^2.1.4",
     "react-native-calendars": "^1.1293.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.8",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-confirmation-code-field": "^7.3.1",
@@ -79,7 +82,9 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-google-mobile-ads": "^10.0.1",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-linear-gradient": "^2.8.1",
     "react-native-maps": "1.3.2",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^4.12.5",
     "react-native-purchases": "5.13.2",
     "react-native-reanimated": "~2.12.0",
@@ -87,6 +92,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-thumbnail-video": "^0.1.2",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-video": "^5.2.1",
