--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/config-plugins": "^5.0.2",
     "@expo/vector-icons": "^13.0.0",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
+    "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "9.3.5",
     "@react-native-community/slider": "4.2.4",
