--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@shopify/flash-list": "1.3.1",
     "add": "^2.0.6",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
@@ -78,7 +79,7 @@
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-currency-input": "^1.1.0",
-    "react-native-date-picker": "^4.2.6",
+    "react-native-date-picker": "^4.2.14",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-google-mobile-ads": "^10.0.1",
@@ -90,6 +91,7 @@
     "react-native-purchases": "5.13.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-redash": "^18.1.0",
+    "react-native-ruler-picker": "^0.2.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
