--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/config-plugins": "^5.0.2",
     "@expo/vector-icons": "^13.0.0",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
+    "@mediapipe/pose": "^0.5.1675469404",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "9.3.5",
@@ -28,6 +29,9 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@shopify/flash-list": "1.3.1",
     "@supabase/supabase-js": "^2.33.1",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs": "^4.12.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "add": "^2.0.6",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
@@ -44,6 +48,7 @@
     "expo-crypto": "~12.0.0",
     "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
+    "expo-gl-cpp": "^11.4.0",
     "expo-google-app-auth": "~8.3.0",
     "expo-haptics": "~12.0.1",
     "expo-image-picker": "~14.0.2",
