--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@expo/config-plugins": "^5.0.2",
     "@expo/vector-icons": "^13.0.0",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
-    "@mediapipe/pose": "^0.5.1675469404",
+    "@mediapipe/pose": "~0.4.0",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "9.3.5",
@@ -29,9 +29,9 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@shopify/flash-list": "1.3.1",
     "@supabase/supabase-js": "^2.33.1",
-    "@tensorflow-models/pose-detection": "^2.1.3",
-    "@tensorflow/tfjs": "^4.12.0",
-    "@tensorflow/tfjs-react-native": "^0.8.0",
+    "@tensorflow-models/pose-detection": "2.0.0",
+    "@tensorflow/tfjs": "3.18.0",
+    "@tensorflow/tfjs-react-native": "0.8.0",
     "add": "^2.0.6",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
@@ -41,13 +41,15 @@
     "expo-apple-authentication": "~5.0.1",
     "expo-asset": "~8.7.0",
     "expo-auth-session": "~3.8.0",
-    "expo-av": "~13.0.3",
+    "expo-av": "^13.6.0",
     "expo-barcode-scanner": "~12.1.0",
     "expo-camera": "~13.1.0",
     "expo-constants": "~14.0.2",
     "expo-crypto": "~12.0.0",
     "expo-dev-client": "~2.0.1",
+    "expo-file-system": "~15.1.1",
     "expo-font": "~11.0.1",
+    "expo-gl": "~12.0.1",
     "expo-gl-cpp": "^11.4.0",
     "expo-google-app-auth": "~8.3.0",
     "expo-haptics": "~12.0.1",
@@ -80,7 +82,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-native": "0.70.5",
+    "react-native": "0.71.11",
     "react-native-big-list": "^1.6.0",
     "react-native-body-highlighter": "^2.1.4",
     "react-native-calendars": "^1.1293.0",
@@ -92,6 +94,7 @@
     "react-native-date-picker": "^4.2.14",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-easing-gradient": "^1.1.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-google-mobile-ads": "^10.0.1",
     "react-native-image-zoom-viewer": "^3.0.1",
