--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo-google-fonts/urbanist": "^0.2.3",
     "@expo/config-plugins": "^5.0.2",
     "@expo/vector-icons": "^13.0.0",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
@@ -27,8 +28,12 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@shopify/flash-list": "1.3.1",
     "@supabase/supabase-js": "^2.33.1",
+    "@tamagui/babel-plugin": "^1.76.0",
+    "@tamagui/config": "^1.76.0",
+    "@tamagui/core": "^1.79.0",
     "@tensorflow-models/pose-detection": "2.0.0",
     "@tensorflow/tfjs": "3.18.0",
     "@tensorflow/tfjs-react-native": "0.8.0",
@@ -116,9 +121,12 @@
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
     "react-native-web": "~0.18.7",
+    "react-redux": "^8.1.3",
     "react-supabase": "^0.2.0",
+    "redux": "^4.2.1",
     "rn-fetch-blob": "^0.12.0",
     "simple-swizzle": "^0.2.2",
+    "tamagui": "^1.7.2",
     "twrnc": "^3.4.1",
     "use-immer": "^0.9.0",
     "yarn": "^1.22.19"
