alot of design stuff

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tamagui/babel-plugin": "^1.76.0",
     "@tamagui/config": "^1.76.0",
     "@tamagui/core": "^1.79.0",
+    "@tamagui/toast": "^1.79.1",
     "@tensorflow-models/pose-detection": "2.0.0",
     "@tensorflow/tfjs": "3.18.0",
     "@tensorflow/tfjs-react-native": "0.8.0",
@@ -42,6 +43,7 @@
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
     "base64-arraybuffer": "^1.0.2",
+    "burnt": "^0.12.1",
     "expo": "^47.0.13",
     "expo-apple-authentication": "~5.0.1",
     "expo-asset": "~8.7.0",
