--- a/.tamagui/tamagui.config.json
+++ b/.tamagui/tamagui.config.json
@@ -45619,7 +45619,7 @@
           "isVar": true,
           "key": "$lightBg",
           "name": "color-25",
-          "val": "#D8D8D8",
+          "val": "white",
           "variable": ""
         },
         "darkBg": {
@@ -47042,7 +47042,7 @@
         "isVar": true,
         "key": "$lightBg",
         "name": "color-25",
-        "val": "#D8D8D8",
+        "val": "white",
         "variable": ""
       },
       "$color.darkBg": {
