--- a/app.json
+++ b/app.json
@@ -33,10 +33,12 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "jsEngine": "hermes",
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.health.rage",
-      "buildNumber": "6"
+      "buildNumber": "6",
+      "jsEngine": "jsc"
     },
     "android": {
       "adaptiveIcon": {
