--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rage",
   "version": "1.0.0",
   "scripts": {
-    "dev": "sudo expo start --dev-client",
+    "dev": "npx expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
