--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@expo-google-fonts/urbanist": "^0.2.3",
     "@expo/config-plugins": "^5.0.2",
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4",
+    "@gorhom/portal": "^1.0.14",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
     "@mediapipe/pose": "~0.4.0",
     "@miblanchard/react-native-slider": "^2.3.1",
@@ -127,6 +129,7 @@
     "react-supabase": "^0.2.0",
     "redux": "^4.2.1",
     "rn-fetch-blob": "^0.12.0",
+    "rrule": "^2.8.1",
     "simple-swizzle": "^0.2.2",
     "tamagui": "^1.7.2",
     "twrnc": "^3.4.1",
