--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,8 @@
   "build": {
     "production": {
       "ios": {
-        "resourceClass": "m-medium"
+        "resourceClass": "m-medium",
+        "cocoapods": "1.12.0"
       },
       "android": {
         "buildType": "apk"
