--- a/package.json
+++ b/package.json
@@ -16,99 +16,98 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo-google-fonts/urbanist": "^0.2.3",
-    "@expo/config-plugins": "^5.0.2",
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@gorhom/portal": "^1.0.14",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
     "@mediapipe/pose": "~0.4.0",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/netinfo": "9.3.5",
-    "@react-native-community/slider": "4.2.4",
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.9.7",
-    "@shopify/flash-list": "1.3.1",
+    "@shopify/flash-list": "1.6.4",
     "@supabase/supabase-js": "^2.33.1",
     "@tamagui/babel-plugin": "^1.76.0",
     "@tamagui/config": "^1.76.0",
     "@tamagui/core": "^1.79.0",
     "@tamagui/toast": "^1.79.1",
-    "@tensorflow-models/pose-detection": "2.0.0",
-    "@tensorflow/tfjs": "3.18.0",
-    "@tensorflow/tfjs-react-native": "0.8.0",
     "burnt": "^0.12.1",
-    "expo": "~47.0.14",
-    "expo-apple-authentication": "~5.0.1",
-    "expo-asset": "~8.7.0",
-    "expo-auth-session": "~3.8.0",
-    "expo-av": "~13.0.3",
-    "expo-barcode-scanner": "~12.1.0",
-    "expo-camera": "~13.1.0",
-    "expo-constants": "~14.0.2",
-    "expo-crypto": "~12.0.0",
-    "expo-dev-client": "~2.0.1",
-    "expo-file-system": "~15.1.1",
-    "expo-font": "~11.0.1",
-    "expo-gl": "~12.0.1",
+    "expo": "~51.0.2",
+    "expo-apple-authentication": "~6.4.1",
+    "expo-asset": "~10.0.6",
+    "expo-auth-session": "~5.5.2",
+    "expo-av": "~14.0.4",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-build-properties": "^0.12.1",
+    "expo-camera": "~15.0.5",
+    "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.13",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.4",
+    "expo-gl": "~14.0.2",
     "expo-google-app-auth": "~8.3.0",
-    "expo-haptics": "~12.0.1",
-    "expo-image-picker": "~14.0.2",
-    "expo-linking": "~3.3.1",
-    "expo-location": "~15.0.1",
-    "expo-permissions": "~14.0.0",
-    "expo-random": "~13.0.0",
-    "expo-screen-orientation": "~5.0.1",
-    "expo-secure-store": "~12.0.0",
-    "expo-sensors": "~12.0.1",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "~2.0.1",
-    "expo-task-manager": "~11.0.1",
-    "expo-tracking-transparency": "~3.0.1",
+    "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.4",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
+    "expo-random": "~14.0.1",
+    "expo-screen-orientation": "~7.0.4",
+    "expo-secure-store": "~13.0.1",
+    "expo-sensors": "~13.0.5",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-task-manager": "~11.8.1",
+    "expo-tracking-transparency": "~4.0.1",
     "expo-video-player": "^2.2.0",
-    "expo-video-thumbnails": "~7.0.0",
-    "expo-web-browser": "~12.0.0",
+    "expo-video-thumbnails": "~8.0.0",
+    "expo-web-browser": "~13.0.3",
     "immer": "^10.0.2",
     "is-arrayish": "^0.3.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "6.7.0",
     "moment": "^2.29.4",
     "openai": "^3.2.1",
     "prop-types": "^15.8.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
     "react-native-body-highlighter": "^2.1.4",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.8",
     "react-native-date-picker": "^4.2.14",
     "react-native-easing-gradient": "^1.1.0",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.16.0",
     "react-native-google-mobile-ads": "^10.0.1",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.8.1",
-    "react-native-maps": "1.3.2",
-    "react-native-pager-view": "6.0.1",
+    "react-native-maps": "1.14.0",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^4.12.5",
     "react-native-purchases": "5.13.2",
-    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-redash": "^18.1.0",
     "react-native-ruler-picker": "^0.2.1",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-ui-lib": "^7.8.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-video": "^5.2.1",
-    "react-native-web": "~0.18.7",
+    "react-native-vision-camera": "~4.0.1",
+    "react-native-web": "~0.19.10",
+    "react-native-worklets-core": "^1.3.2",
     "react-redux": "^8.1.3",
     "react-supabase": "^0.2.0",
     "redux": "^4.2.1",
@@ -119,16 +118,15 @@
     "victory-native": "^36.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
     "@types/react-native": "~0.69.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
+    "jest": "^29.4.0",
     "null-loader": "^4.0.1",
     "react-native-dotenv": "^3.4.8",
     "react-test-renderer": "18.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
