--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@gorhom/bottom-sheet": "^4",
     "@gorhom/portal": "^1.0.14",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
-    "@mediapipe/pose": "~0.4.0",
+    "@mediapipe/pose": "^0.5.1675469404",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
@@ -33,11 +33,18 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@shopify/flash-list": "1.6.4",
+    "@shopify/react-native-skia": "1.2.3",
     "@supabase/supabase-js": "^2.33.1",
     "@tamagui/babel-plugin": "^1.76.0",
     "@tamagui/config": "^1.76.0",
     "@tamagui/core": "^1.79.0",
     "@tamagui/toast": "^1.79.1",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs-backend-webgl": "^4.19.0",
+    "@tensorflow/tfjs-backend-webgpu": "^4.19.0",
+    "@tensorflow/tfjs-converter": "^4.19.0",
+    "@tensorflow/tfjs-core": "^4.19.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "burnt": "^0.12.1",
     "expo": "~51.0.2",
     "expo-apple-authentication": "~6.4.1",
@@ -87,6 +94,8 @@
     "react-native-circular-progress": "^1.3.8",
     "react-native-date-picker": "^4.2.14",
     "react-native-easing-gradient": "^1.1.0",
+    "react-native-fast-tflite": "^1.2.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.0",
     "react-native-google-mobile-ads": "^10.0.1",
     "react-native-image-zoom-viewer": "^3.0.1",
@@ -115,7 +124,8 @@
     "tamagui": "^1.7.2",
     "twrnc": "^3.4.1",
     "use-immer": "^0.9.0",
-    "victory-native": "^36.9.1"
+    "victory-native": "^36.9.1",
+    "vision-camera-resize-plugin": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
