--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tamagui/config": "^1.76.0",
     "@tamagui/core": "^1.79.0",
     "@tamagui/toast": "^1.79.1",
+    "@tensorflow-models/body-pix": "^2.2.1",
     "@tensorflow-models/pose-detection": "^2.1.3",
     "@tensorflow/tfjs-backend-webgl": "^4.19.0",
     "@tensorflow/tfjs-backend-webgpu": "^4.19.0",
